unpackaged/main/default/objects/Round_Robin_Assignee__c/Round_Robin_Assignee__c.object-meta.xml
<CustomObject>
    <label>Round Robin Assignee</label>
    <nameField>
        <label>Round Robin Assignee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Assignee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>