unpackaged/main/default/objects/Round_Robin_Assignee__c/validationRules/User_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(User__c)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>Please select a User</errorMessage>
</ValidationRule>