unpackaged/main/default/objects/Round_Robin_Assignee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Round_Robin__c</columns>
    <columns>User__c</columns>
    <columns>Is_Active__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>